main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.3.255.40792",
      "templateHash": "8353038408887853796"
    }
  },
  "functions": [],
  "resources": [
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2019-10-01",
      "name": "dnsvnet",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.3.255.40792",
              "templateHash": "14841056449664017670"
            }
          },
          "functions": [],
          "resources": [
            {
              "type": "Microsoft.Network/virtualNetworks",
              "apiVersion": "2020-06-01",
              "name": "aadds-eus-vnet",
              "location": "westeurope",
              "properties": {
                "addressSpace": {
                  "addressPrefixes": [
                    "10.0.0.0/24"
                  ]
                },
                "subnets": [
                  {
                    "name": "aadds-subnet",
                    "properties": {
                      "addressPrefix": "10.0.0.0/24"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2020-06-01",
              "name": "aadds-weu-nsg",
              "location": "westeurope",
              "properties": {
                "securityRules": [
                  {
                    "name": "AllowSyncWithAzureAD",
                    "properties": {
                      "access": "Allow",
                      "priority": 101,
                      "direction": "Inbound",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "443"
                    }
                  },
                  {
                    "name": "AllowPSRemoting",
                    "properties": {
                      "access": "Allow",
                      "priority": 301,
                      "direction": "Inbound",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "5986"
                    }
                  },
                  {
                    "name": "AllowRD",
                    "properties": {
                      "access": "Allow",
                      "priority": 201,
                      "direction": "Inbound",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "CorpNetSaw",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "3389"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/virtualNetworks",
              "apiVersion": "2020-06-01",
              "name": "aadds-weu-vnet",
              "location": "westeurope",
              "properties": {
                "addressSpace": {
                  "addressPrefixes": [
                    "10.1.0.0/24"
                  ]
                },
                "subnets": [
                  {
                    "name": "aadds-subnet",
                    "properties": {
                      "addressPrefix": "10.1.0.0/24",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'aadds-weu-nsg')]"
                      }
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'aadds-weu-nsg')]"
              ]
            },
            {
              "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
              "apiVersion": "2020-06-01",
              "name": "[format('{0}/{1}-peering-{2}', 'aadds-eus-vnet', 'aadds-eus-vnet', 'aadds-weu-vnet')]",
              "properties": {
                "allowVirtualNetworkAccess": true,
                "allowForwardedTraffic": true,
                "allowGatewayTransit": false,
                "useRemoteGateways": false,
                "remoteVirtualNetwork": {
                  "id": "[resourceId('Microsoft.Network/virtualNetworks', 'aadds-weu-vnet')]"
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', 'aadds-weu-vnet')]",
                "[resourceId('Microsoft.Network/virtualNetworks', 'aadds-eus-vnet')]"
              ]
            },
            {
              "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
              "apiVersion": "2020-06-01",
              "name": "[format('{0}/{1}-peering-{2}', 'aadds-weu-vnet', 'aadds-weu-vnet', 'aadds-eus-vnet')]",
              "properties": {
                "allowVirtualNetworkAccess": true,
                "allowForwardedTraffic": true,
                "allowGatewayTransit": false,
                "useRemoteGateways": false,
                "remoteVirtualNetwork": {
                  "id": "[resourceId('Microsoft.Network/virtualNetworks', 'aadds-eus-vnet')]"
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', 'aadds-weu-vnet')]",
                "[resourceId('Microsoft.Network/virtualNetworks', 'aadds-eus-vnet')]"
              ]
            }
          ],
          "outputs": {
            "aaddssudnet": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/virtualNetworks', 'aadds-weu-vnet')).subnets[0].id]"
            }
          }
        }
      }
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2019-10-01",
      "name": "dnsaadds",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "westeurope"
          },
          "subnetId": {
            "value": "[reference(resourceId('Microsoft.Resources/deployments', 'dnsvnet'), '2019-10-01').outputs.aaddssudnet.value]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.3.255.40792",
              "templateHash": "10945083320644217387"
            }
          },
          "parameters": {
            "domainName": {
              "type": "string",
              "defaultValue": "cloudsquare.co.uk"
            },
            "subnetId": {
              "type": "string"
            },
            "location": {
              "type": "string"
            }
          },
          "functions": [],
          "resources": [
            {
              "type": "Microsoft.AAD/domainServices",
              "apiVersion": "2020-01-01",
              "name": "[parameters('domainName')]",
              "location": "[parameters('location')]",
              "properties": {
                "domainName": "[parameters('domainName')]",
                "domainSecuritySettings": {
                  "ntlmV1": "Enabled",
                  "syncNtlmPasswords": "Enabled",
                  "tlsV1": "Enabled"
                },
                "filteredSync": "Disabled",
                "ldapsSettings": {
                  "externalAccess": "Disabled",
                  "ldaps": "Disabled"
                },
                "notificationSettings": {
                  "notifyDcAdmins": "Enabled",
                  "notifyGlobalAdmins": "Enabled",
                  "additionalRecipients": []
                },
                "replicaSets": [
                  {
                    "subnetId": "[parameters('subnetId')]",
                    "location": "[parameters('location')]"
                  }
                ],
                "sku": "Standard"
              }
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'dnsvnet')]"
      ]
    }
  ]
}
